fix: ConfettiExplosion in <cfp-submission-btn> caused horizontal overflow

--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -66,6 +66,7 @@ strong
 a
   color: #fff
 .maze-background
+  overflow-x: hidden // prevent ConfettiExplosion in cfp page causing horizontal overflow
   background-color: #333333
   background-image: url(/imgs/cfp/cfp_maze_pattern.png)
   background-size: 120vw auto
